# lambda

./: .gitignore  Makefile  dune-project  flake.nix  helloworld.opam  readme.md
test/: bin_op.lambda  id.lambda  if.lambda  let_in.lambda  module.lambda  rec.lambda  simple.lambda  tc_error.lambda  tcerror.hs  two_args.lambda
